--- a/templates/_layouts/base.html
+++ b/templates/_layouts/base.html
@@ -1,8 +1,11 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 
 <html> 
 <head>
     <title>{% block title %}{% endblock title %}</title>
+    <link rel="shortcut icon" href='{% static "surveys/favicon.ico" %}' type="image/x-icon">
+    <link rel="icon" href='{% static "surveys/favicon.ico" %}' type="image/x-icon">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
